Added content to index.html
placeholder images for 400x300 not working

--- a/index.html
+++ b/index.html
@@ -10,8 +10,41 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-
-
-
+	<div>
+		<img src="http://placekitten.com/1800/700" alt="placeholder image"/>
+		<h1></h1>
+	</div>
+	<div>
+		<div>
+			<img src="https://placekitten.com/400/300" alt="placeholder image"/>
+			<p>Cheesecake tootsie roll dragée sweet roll sugar plum toffee ice cream. Gummi bears chupa chups pastry sweet roll fruitcake toffee pudding icing. Cupcake liquorice liquorice.</p>
+		</div>
+		<div>
+			<img src="https://placekitten.com/400/300" alt="placeholder image"/>
+			<p>Cheesecake tootsie roll dragée sweet roll sugar plum toffee ice cream. Gummi bears chupa chups pastry sweet roll fruitcake toffee pudding icing. Cupcake liquorice liquorice.</p>
+		</div>
+		<div>
+			<img src="https://placekitten.com/400/300" alt="placeholder image"/>
+			<p>Cheesecake tootsie roll dragée sweet roll sugar plum toffee ice cream. Gummi bears chupa chups pastry sweet roll fruitcake toffee pudding icing. Cupcake liquorice liquorice.</p>
+		</div>
+		<div>
+			<img src="https://placekitten.com/400/300" alt="placeholder image"/>
+			<p>Cheesecake tootsie roll dragée sweet roll sugar plum toffee ice cream. Gummi bears chupa chups pastry sweet roll fruitcake toffee pudding icing. Cupcake liquorice liquorice.</p>
+		</div>
+	</div>
+	<div>
+		<div>
+			<h2>Cake sweet roll oat cake</h2>
+			<p>Cookie tootsie roll sugar plum bear claw lollipop. Liquorice apple pie lollipop ice cream dessert cake jujubes sugar plum caramels. Jujubes cookie jelly-o croissant cheesecake cupcake powder oat cake. Topping icing oat cake sugar plum chupa chups soufflé.
+Chocolate bar tootsie roll apple pie. Powder apple pie topping jelly beans soufflé. Gingerbread icing tiramisu tiramisu brownie ice cream candy canes.
+Marzipan chupa chups marzipan soufflé macaroon pastry bear claw donut. Candy canes croissant muffin marshmallow gingerbread. Fruitcake topping chupa chups sugar plum caramels icing dessert gummies halvah. Sugar plum sweet roll liquorice sweet topping jelly-o cake cookie.</p>
+		</div>
+		<div>
+			<h2>Liquorice apple pie lollipop</h2>
+			<p>Cookie tootsie roll sugar plum bear claw lollipop. Liquorice apple pie lollipop ice cream dessert cake jujubes sugar plum caramels. Jujubes cookie jelly-o croissant cheesecake cupcake powder oat cake. Topping icing oat cake sugar plum chupa chups soufflé.
+Chocolate bar tootsie roll apple pie. Powder apple pie topping jelly beans soufflé. Gingerbread icing tiramisu tiramisu brownie ice cream candy canes.
+Marzipan chupa chups marzipan soufflé macaroon pastry bear claw donut. Candy canes croissant muffin marshmallow gingerbread. Fruitcake topping chupa chups sugar plum caramels icing dessert gummies halvah. Sugar plum sweet roll liquorice sweet topping jelly-o cake cookie.</p>
+		</div>
+	</div>
 </body>
 </html>
