Placeholder images working on index.html

--- a/index.html
+++ b/index.html
@@ -16,19 +16,19 @@
 	</div>
 	<div>
 		<div>
-			<img src="https://placekitten.com/400/300" alt="placeholder image"/>
+			<img src="http://lorempixel.com/output/cats-q-c-400-300-9.jpg" alt="placeholder image"/>
 			<p>Cheesecake tootsie roll dragée sweet roll sugar plum toffee ice cream. Gummi bears chupa chups pastry sweet roll fruitcake toffee pudding icing. Cupcake liquorice liquorice.</p>
 		</div>
 		<div>
-			<img src="https://placekitten.com/400/300" alt="placeholder image"/>
+			<img src="http://lorempixel.com/output/cats-q-c-400-300-9.jpg" alt="placeholder image"/>
 			<p>Cheesecake tootsie roll dragée sweet roll sugar plum toffee ice cream. Gummi bears chupa chups pastry sweet roll fruitcake toffee pudding icing. Cupcake liquorice liquorice.</p>
 		</div>
 		<div>
-			<img src="https://placekitten.com/400/300" alt="placeholder image"/>
+			<img src="http://lorempixel.com/output/cats-q-c-400-300-9.jpg" alt="placeholder image"/>
 			<p>Cheesecake tootsie roll dragée sweet roll sugar plum toffee ice cream. Gummi bears chupa chups pastry sweet roll fruitcake toffee pudding icing. Cupcake liquorice liquorice.</p>
 		</div>
 		<div>
-			<img src="https://placekitten.com/400/300" alt="placeholder image"/>
+			<img src="http://lorempixel.com/output/cats-q-c-400-300-9.jpg" alt="placeholder image"/>
 			<p>Cheesecake tootsie roll dragée sweet roll sugar plum toffee ice cream. Gummi bears chupa chups pastry sweet roll fruitcake toffee pudding icing. Cupcake liquorice liquorice.</p>
 		</div>
 	</div>
