Applying grid to index.html
For the millionth time my images are fighting with the grid, argh

--- a/index.html
+++ b/index.html
@@ -10,28 +10,46 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-	<div>
-		<img src="http://placekitten.com/1800/700" alt="placeholder image"/>
-		<h1></h1>
+	<nav>
+		<ul>
+			<li><a href="index.html">Everything Nice</a></li>
+			<li><a href="sprinkles.html">Sprinkles</a></li>
+			<li><a href="unicorns.html">Unicorns</a></li>
+			<li><a href="rainbows.html">Rainbows</a></li>
+			<li><a href="candy.html">Candy</a></li>
+		</ul>
+	</nav>
+
+	<div class="grid">
+		<h1 class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1">Everybody's got their poison, and mine is sugar.</h1>
 	</div>
 	<div>
-		<div>
-			<img src="http://lorempixel.com/output/cats-q-c-400-300-9.jpg" alt="placeholder image"/>
-			<p>Cheesecake tootsie roll dragée sweet roll sugar plum toffee ice cream. Gummi bears chupa chups pastry sweet roll fruitcake toffee pudding icing. Cupcake liquorice liquorice.</p>
+		<div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-4">
+			<div class="grid">
+				<img class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1" src="http://lorempixel.com/output/cats-q-c-400-300-9.jpg" alt="placeholder image"/>
+				<p class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1">Cheesecake tootsie roll dragée sweet roll sugar plum toffee ice cream. Gummi bears chupa chups pastry sweet roll fruitcake toffee pudding icing. Cupcake liquorice liquorice.</p>
+			</div>
 		</div>
-		<div>
-			<img src="http://lorempixel.com/output/cats-q-c-400-300-9.jpg" alt="placeholder image"/>
-			<p>Cheesecake tootsie roll dragée sweet roll sugar plum toffee ice cream. Gummi bears chupa chups pastry sweet roll fruitcake toffee pudding icing. Cupcake liquorice liquorice.</p>
+		<div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-4">
+			<div class="grid">
+				<img class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1" src="http://lorempixel.com/output/cats-q-c-400-300-9.jpg" alt="placeholder image"/>
+				<p class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1">Cheesecake tootsie roll dragée sweet roll sugar plum toffee ice cream. Gummi bears chupa chups pastry sweet roll fruitcake toffee pudding icing. Cupcake liquorice liquorice.</p>
+			</div>
 		</div>
-		<div>
-			<img src="http://lorempixel.com/output/cats-q-c-400-300-9.jpg" alt="placeholder image"/>
-			<p>Cheesecake tootsie roll dragée sweet roll sugar plum toffee ice cream. Gummi bears chupa chups pastry sweet roll fruitcake toffee pudding icing. Cupcake liquorice liquorice.</p>
+		<div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-4">	
+			<div class="grid">
+				<img class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1" src="http://lorempixel.com/output/cats-q-c-400-300-9.jpg" alt="placeholder image"/>
+				<p class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1">Cheesecake tootsie roll dragée sweet roll sugar plum toffee ice cream. Gummi bears chupa chups pastry sweet roll fruitcake toffee pudding icing. Cupcake liquorice liquorice.</p>
+			</div>
 		</div>
-		<div>
-			<img src="http://lorempixel.com/output/cats-q-c-400-300-9.jpg" alt="placeholder image"/>
-			<p>Cheesecake tootsie roll dragée sweet roll sugar plum toffee ice cream. Gummi bears chupa chups pastry sweet roll fruitcake toffee pudding icing. Cupcake liquorice liquorice.</p>
-		</div>
+		<div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-4">	
+			<div class="grid">
+				<img class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1" src="http://lorempixel.com/output/cats-q-c-400-300-9.jpg" alt="placeholder image"/>
+				<p class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1">Cheesecake tootsie roll dragée sweet roll sugar plum toffee ice cream. Gummi bears chupa chups pastry sweet roll fruitcake toffee pudding icing. Cupcake liquorice liquorice.</p>
+			</div>
+		</div>	
 	</div>
+
 	<div>
 		<div>
 			<h2>Cake sweet roll oat cake</h2>
@@ -46,5 +64,9 @@ Chocolate bar tootsie roll apple pie. Powder apple pie topping jelly beans souff
 Marzipan chupa chups marzipan soufflé macaroon pastry bear claw donut. Candy canes croissant muffin marshmallow gingerbread. Fruitcake topping chupa chups sugar plum caramels icing dessert gummies halvah. Sugar plum sweet roll liquorice sweet topping jelly-o cake cookie.</p>
 		</div>
 	</div>
+
+	<footer>
+		<p>&copy; Everything Nice</p>
+	</footer>
 </body>
 </html>
