--- a/index.html
+++ b/index.html
@@ -10,14 +10,16 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-	<nav>
-		<ul>
-			<li><a href="index.html">Everything Nice</a></li>
-			<li><a href="sprinkles.html">Sprinkles</a></li>
-			<li><a href="unicorns.html">Unicorns</a></li>
-			<li><a href="rainbows.html">Rainbows</a></li>
-			<li><a href="candy.html">Candy</a></li>
-		</ul>
+	<nav class="grid">
+		<a class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-2" href="index.html">Everything Nice</a>
+		<div class="unit unit-xs-1 unit-s-1 unit-m-2-3 unit-l-1-2">
+			<ul class="grid">
+				<li class="unit unit-xs-1 unit-s-1 unit-m-1-6 unit-l-1-4"><a href="sprinkles.html">Sprinkles</a></li>
+				<li class="unit unit-xs-1 unit-s-1 unit-m-1-6 unit-l-1-4"><a href="unicorns.html">Unicorns</a></li>
+				<li class="unit unit-xs-1 unit-s-1 unit-m-1-6 unit-l-1-4"><a href="rainbows.html">Rainbows</a></li>
+				<li class="unit unit-xs-1 unit-s-1 unit-m-1-6 unit-l-1-4"><a href="candy.html">Candy</a></li>
+			</ul>
+		</div>		
 	</nav>
 
 	<div class="grid">
@@ -50,14 +52,14 @@
 		</div>	
 	</div>
 
-	<div>
-		<div>
+	<div class="grid">
+		<div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
 			<h2>Cake sweet roll oat cake</h2>
 			<p>Cookie tootsie roll sugar plum bear claw lollipop. Liquorice apple pie lollipop ice cream dessert cake jujubes sugar plum caramels. Jujubes cookie jelly-o croissant cheesecake cupcake powder oat cake. Topping icing oat cake sugar plum chupa chups soufflé.
 Chocolate bar tootsie roll apple pie. Powder apple pie topping jelly beans soufflé. Gingerbread icing tiramisu tiramisu brownie ice cream candy canes.
 Marzipan chupa chups marzipan soufflé macaroon pastry bear claw donut. Candy canes croissant muffin marshmallow gingerbread. Fruitcake topping chupa chups sugar plum caramels icing dessert gummies halvah. Sugar plum sweet roll liquorice sweet topping jelly-o cake cookie.</p>
 		</div>
-		<div>
+		<div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
 			<h2>Liquorice apple pie lollipop</h2>
 			<p>Cookie tootsie roll sugar plum bear claw lollipop. Liquorice apple pie lollipop ice cream dessert cake jujubes sugar plum caramels. Jujubes cookie jelly-o croissant cheesecake cupcake powder oat cake. Topping icing oat cake sugar plum chupa chups soufflé.
 Chocolate bar tootsie roll apple pie. Powder apple pie topping jelly beans soufflé. Gingerbread icing tiramisu tiramisu brownie ice cream candy canes.
@@ -65,8 +67,8 @@ Marzipan chupa chups marzipan soufflé macaroon pastry bear claw donut. Candy ca
 		</div>
 	</div>
 
-	<footer>
-		<p>&copy; Everything Nice</p>
+	<footer class="grid">
+		<p class="unit">&copy; Everything Nice</p>
 	</footer>
 </body>
 </html>
