--- a/index.html
+++ b/index.html
@@ -29,24 +29,28 @@
 		<div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-4">
 			<div class="grid">
 				<img class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1" src="http://lorempixel.com/output/cats-q-c-400-300-9.jpg" alt="placeholder image"/>
+				<h2 class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1">Sprinkles</h2>
 				<p class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1">Cheesecake tootsie roll dragée sweet roll sugar plum toffee ice cream. Gummi bears chupa chups pastry sweet roll fruitcake toffee pudding icing. Cupcake liquorice liquorice.</p>
 			</div>
 		</div>
 		<div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-4">
 			<div class="grid">
 				<img class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1" src="http://lorempixel.com/output/cats-q-c-400-300-9.jpg" alt="placeholder image"/>
+				<h2 class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1">Unicorns</h2>
 				<p class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1">Cheesecake tootsie roll dragée sweet roll sugar plum toffee ice cream. Gummi bears chupa chups pastry sweet roll fruitcake toffee pudding icing. Cupcake liquorice liquorice.</p>
 			</div>
 		</div>
 		<div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-4">	
 			<div class="grid">
 				<img class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1" src="http://lorempixel.com/output/cats-q-c-400-300-9.jpg" alt="placeholder image"/>
+				<h2 class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1">Rainbows</h2>
 				<p class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1">Cheesecake tootsie roll dragée sweet roll sugar plum toffee ice cream. Gummi bears chupa chups pastry sweet roll fruitcake toffee pudding icing. Cupcake liquorice liquorice.</p>
 			</div>
 		</div>
 		<div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-4">	
 			<div class="grid">
 				<img class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1" src="http://lorempixel.com/output/cats-q-c-400-300-9.jpg" alt="placeholder image"/>
+				<h2 class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1">Candy</h2>
 				<p class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1">Cheesecake tootsie roll dragée sweet roll sugar plum toffee ice cream. Gummi bears chupa chups pastry sweet roll fruitcake toffee pudding icing. Cupcake liquorice liquorice.</p>
 			</div>
 		</div>	
