--- a/index.html
+++ b/index.html
@@ -10,60 +10,70 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-	<nav class="grid">
-		<a class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-2" href="index.html">Everything Nice</a>
-		<div class="unit unit-xs-1 unit-s-1 unit-m-2-3 unit-l-1-2">
+	<nav class="grid coda">
+		<a class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-4 yotta text-center f-left island push-1-2 title" href="index.html">Everything Nice</a>
+		<div class="unit unit-xs-1 unit-s-1 unit-m-2-3 unit-l-3-4 f-left">
 			<ul class="grid">
-				<li class="unit unit-xs-1 unit-s-1 unit-m-1-6 unit-l-1-4"><a href="sprinkles.html">Sprinkles</a></li>
-				<li class="unit unit-xs-1 unit-s-1 unit-m-1-6 unit-l-1-4"><a href="unicorns.html">Unicorns</a></li>
-				<li class="unit unit-xs-1 unit-s-1 unit-m-1-6 unit-l-1-4"><a href="rainbows.html">Rainbows</a></li>
-				<li class="unit unit-xs-1 unit-s-1 unit-m-1-6 unit-l-1-4"><a href="candy.html">Candy</a></li>
+				<li class="unit unit-xs-1 unit-s-1 unit-m-1-6 unit-l-1-4 text-center f-right island-1-2"><a href="sprinkles.html">Sprinkles</a></li>
+				<li class="unit unit-xs-1 unit-s-1 unit-m-1-6 unit-l-1-4 text-center f-right island-1-2"><a href="unicorns.html">Unicorns</a></li>
+				<li class="unit unit-xs-1 unit-s-1 unit-m-1-6 unit-l-1-4 text-center f-right island-1-2"><a href="rainbows.html">Rainbows</a></li>
+				<li class="unit unit-xs-1 unit-s-1 unit-m-1-6 unit-l-1-4 text-center f-right island-1-2 push-1-2"><a href="candy.html">Candy</a></li>
 			</ul>
 		</div>		
 	</nav>
 
 	<div class="grid">
-		<h1 class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1">Everybody's got their poison, and mine is sugar.</h1>
+		<h1 class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1 text-center">Everybody's got their poison, and mine is sugar.</h1>
 	</div>
 	<div>
-		<div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-4">
+		<div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-4 partA">
 			<div class="grid">
 				<img class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1" src="http://lorempixel.com/output/cats-q-c-400-300-9.jpg" alt="placeholder image"/>
-				<h2 class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1">Sprinkles</h2>
-				<p class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1">Cheesecake tootsie roll dragée sweet roll sugar plum toffee ice cream. Gummi bears chupa chups pastry sweet roll fruitcake toffee pudding icing. Cupcake liquorice liquorice.</p>
+				<div class="push-0 island-1-2">
+					<h2 class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1 push-0 blue">Sprinkles</h2>
+					<p class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1 blue">Cheesecake tootsie roll dragée sweet roll sugar plum toffee ice cream. Gummi bears chupa chups pastry sweet roll fruitcake toffee pudding icing. Cupcake liquorice liquorice.</p>
+				</div>
 			</div>
 		</div>
-		<div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-4">
+		<div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-4 partA">
 			<div class="grid">
 				<img class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1" src="http://lorempixel.com/output/cats-q-c-400-300-9.jpg" alt="placeholder image"/>
-				<h2 class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1">Unicorns</h2>
-				<p class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1">Cheesecake tootsie roll dragée sweet roll sugar plum toffee ice cream. Gummi bears chupa chups pastry sweet roll fruitcake toffee pudding icing. Cupcake liquorice liquorice.</p>
+				<div class="push-0 island-1-2">
+					<h2 class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1 push-0 red">Unicorns</h2>
+					<p class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1 red">Cheesecake tootsie roll dragée sweet roll sugar plum toffee ice cream. Gummi bears chupa chups pastry sweet roll fruitcake toffee pudding icing. Cupcake liquorice liquorice.</p>
+				</div>
 			</div>
 		</div>
-		<div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-4">	
+		<div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-4 partA">	
 			<div class="grid">
 				<img class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1" src="http://lorempixel.com/output/cats-q-c-400-300-9.jpg" alt="placeholder image"/>
-				<h2 class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1">Rainbows</h2>
-				<p class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1">Cheesecake tootsie roll dragée sweet roll sugar plum toffee ice cream. Gummi bears chupa chups pastry sweet roll fruitcake toffee pudding icing. Cupcake liquorice liquorice.</p>
+				<div class="push-0 island-1-2">
+					<h2 class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1 push-0 yellow">Rainbows</h2>
+					<p class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1 yellow">Cheesecake tootsie roll dragée sweet roll sugar plum toffee ice cream. Gummi bears chupa chups pastry sweet roll fruitcake toffee pudding icing. Cupcake liquorice liquorice.</p>
+				</div>
 			</div>
 		</div>
-		<div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-4">	
+		<div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-4 partA">	
 			<div class="grid">
 				<img class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1" src="http://lorempixel.com/output/cats-q-c-400-300-9.jpg" alt="placeholder image"/>
-				<h2 class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1">Candy</h2>
-				<p class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1">Cheesecake tootsie roll dragée sweet roll sugar plum toffee ice cream. Gummi bears chupa chups pastry sweet roll fruitcake toffee pudding icing. Cupcake liquorice liquorice.</p>
+				<div class="push-0 island-1-2">
+					<h2 class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1 push-0 pink">Candy</h2>
+					<p class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1 pink">Cheesecake tootsie roll dragée sweet roll sugar plum toffee ice cream. Gummi bears chupa chups pastry sweet roll fruitcake toffee pudding icing. Cupcake liquorice liquorice.</p>
+				</div>
 			</div>
 		</div>	
 	</div>
 
+	<hr>
+
 	<div class="grid">
-		<div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
+		<div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2 island-1-2 f-left partB">
 			<h2>Cake sweet roll oat cake</h2>
 			<p>Cookie tootsie roll sugar plum bear claw lollipop. Liquorice apple pie lollipop ice cream dessert cake jujubes sugar plum caramels. Jujubes cookie jelly-o croissant cheesecake cupcake powder oat cake. Topping icing oat cake sugar plum chupa chups soufflé.
 Chocolate bar tootsie roll apple pie. Powder apple pie topping jelly beans soufflé. Gingerbread icing tiramisu tiramisu brownie ice cream candy canes.
 Marzipan chupa chups marzipan soufflé macaroon pastry bear claw donut. Candy canes croissant muffin marshmallow gingerbread. Fruitcake topping chupa chups sugar plum caramels icing dessert gummies halvah. Sugar plum sweet roll liquorice sweet topping jelly-o cake cookie.</p>
 		</div>
-		<div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
+		<div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2 island-1-2 f-left partB">
 			<h2>Liquorice apple pie lollipop</h2>
 			<p>Cookie tootsie roll sugar plum bear claw lollipop. Liquorice apple pie lollipop ice cream dessert cake jujubes sugar plum caramels. Jujubes cookie jelly-o croissant cheesecake cupcake powder oat cake. Topping icing oat cake sugar plum chupa chups soufflé.
 Chocolate bar tootsie roll apple pie. Powder apple pie topping jelly beans soufflé. Gingerbread icing tiramisu tiramisu brownie ice cream candy canes.
