--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		<h1 class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1 text-center">Everybody's got their poison, and mine is sugar.</h1>
 	</div>
 	<div>
-		<div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-4 partA">
+		<div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-4 partA f-left">
 			<div class="grid">
 				<img class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1" src="http://lorempixel.com/output/cats-q-c-400-300-9.jpg" alt="placeholder image"/>
 				<div class="push-0 island-1-2">
@@ -35,7 +35,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-4 partA">
+		<div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-4 partA f-left">
 			<div class="grid">
 				<img class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1" src="http://lorempixel.com/output/cats-q-c-400-300-9.jpg" alt="placeholder image"/>
 				<div class="push-0 island-1-2">
@@ -44,7 +44,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-4 partA">	
+		<div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-4 partA f-left">	
 			<div class="grid">
 				<img class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1" src="http://lorempixel.com/output/cats-q-c-400-300-9.jpg" alt="placeholder image"/>
 				<div class="push-0 island-1-2">
@@ -53,7 +53,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-4 partA">	
+		<div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-4 partA f-left">	
 			<div class="grid">
 				<img class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1" src="http://lorempixel.com/output/cats-q-c-400-300-9.jpg" alt="placeholder image"/>
 				<div class="push-0 island-1-2">
