--- a/index.html
+++ b/index.html
@@ -10,19 +10,19 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-	<nav class="grid coda">
-		<a class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-4 yotta text-center f-left island push-1-2 title" href="index.html">Everything Nice</a>
-		<div class="unit unit-xs-1 unit-s-1 unit-m-2-3 unit-l-3-4 f-left">
+	<nav class="grid coda pad-b">
+		<a class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-4 yotta text-center f-left island push-1-2 title f-left" href="index.html">Everything Nice</a>
+		<div class="unit unit-xs-1 unit-s-1 unit-m-2-3 unit-l-1-2 f-right">
 			<ul class="grid">
-				<li class="unit unit-xs-1 unit-s-1 unit-m-1-6 unit-l-1-4 text-center f-right island-1-2"><a href="sprinkles.html">Sprinkles</a></li>
-				<li class="unit unit-xs-1 unit-s-1 unit-m-1-6 unit-l-1-4 text-center f-right island-1-2"><a href="unicorns.html">Unicorns</a></li>
-				<li class="unit unit-xs-1 unit-s-1 unit-m-1-6 unit-l-1-4 text-center f-right island-1-2"><a href="rainbows.html">Rainbows</a></li>
-				<li class="unit unit-xs-1 unit-s-1 unit-m-1-6 unit-l-1-4 text-center f-right island-1-2 push-1-2"><a href="candy.html">Candy</a></li>
+				<li class="unit unit-xs-1 unit-s-1 unit-m-1-6 unit-l-1-4 text-center island-1-2"><a href="sprinkles.html">Sprinkles</a></li>
+				<li class="unit unit-xs-1 unit-s-1 unit-m-1-6 unit-l-1-4 text-center island-1-2"><a href="unicorns.html">Unicorns</a></li>
+				<li class="unit unit-xs-1 unit-s-1 unit-m-1-6 unit-l-1-4 text-center island-1-2"><a href="rainbows.html">Rainbows</a></li>
+				<li class="unit unit-xs-1 unit-s-1 unit-m-1-6 unit-l-1-4 text-center island-1-2 push-1-2"><a href="candy.html">Candy</a></li>
 			</ul>
 		</div>		
 	</nav>
 
-	<div class="grid">
+	<div class="grid pad-b-1-2">
 		<h1 class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1 text-center">Everybody's got their poison, and mine is sugar.</h1>
 	</div>
 	<div>
