fighting with navigation alignment
styling navigation items

--- a/sprinkles.html
+++ b/sprinkles.html
@@ -2,7 +2,7 @@
 <html lang="en-ca">
 <head>
 	<meta charset="utf-8">
-	<title>Spinkles</title>
+	<title>Sprinkles</title>
 	<link rel="stylesheet" href="css/grid.css">
 	<link rel="stylesheet" href="css/typography.css">
 	<link rel="stylesheet" href="css/main.css">
