--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 </head>
 <body>
 	<nav class="grid coda pad-b">
-		<a class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-4 yotta text-center f-left island push-1-2 title f-left" href="index.html">Everything Nice</a>
-		<div class="unit unit-xs-1 unit-s-1 unit-m-2-3 unit-l-1-2 f-right">
-			<ul class="grid">
-				<li class="unit unit-xs-1 unit-s-1 unit-m-1-6 unit-l-1-4 text-center island-1-2"><a href="sprinkles.html">Sprinkles</a></li>
-				<li class="unit unit-xs-1 unit-s-1 unit-m-1-6 unit-l-1-4 text-center island-1-2"><a href="unicorns.html">Unicorns</a></li>
-				<li class="unit unit-xs-1 unit-s-1 unit-m-1-6 unit-l-1-4 text-center island-1-2"><a href="rainbows.html">Rainbows</a></li>
-				<li class="unit unit-xs-1 unit-s-1 unit-m-1-6 unit-l-1-4 text-center island-1-2 push-1-2"><a href="candy.html">Candy</a></li>
+		<a class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-4 yotta text-center f-left island title white" href="index.html">Everything Nice</a>
+		<div class="unit unit-xs-1 unit-s-1 unit-m-2-3 unit-l-1-2 f-left menu">
+			<ul class="grid push-0">
+				<li class="unit unit-xs-1-4 unit-s-1-4 unit-m-1-6 unit-l-1-6 text-center island-1-2 menu-item blue"><a class="pad-b-1-2 pad-t-1-2 blue" href="sprinkles.html">Sprinkles</a></li>
+				<li class="unit unit-xs-1-4 unit-s-1-4 unit-m-1-6 unit-l-1-6 text-center island-1-2 menu-item red"><a class="pad-b-1-2 pad-t-1-2 red" href="unicorns.html">Unicorns</a></li>
+				<li class="unit unit-xs-1-4 unit-s-1-4 unit-m-1-6 unit-l-1-6 text-center island-1-2 menu-item yellow"><a class="pad-b-1-2 pad-t-1-2 yellow" href="rainbows.html">Rainbows</a></li>
+				<li class="unit unit-xs-1-4 unit-s-1-4 unit-m-1-6 unit-l-1-6 text-center island-1-2 menu-item pink"><a class="pad-b-1-2 pad-t-1-2 pink" href="candy.html">Candy</a></li>
 			</ul>
 		</div>		
 	</nav>
