trying to preserve image ratio
still fighting with navigation alignment,
fiddled with second section to get paragraphs aligned properly

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 	<nav class="grid coda pad-b">
 		<a class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-4 yotta text-center f-left island title white" href="index.html">Everything Nice</a>
-		<div class="unit unit-xs-1 unit-s-1 unit-m-2-3 unit-l-1-2 f-left menu">
+		<div class="unit unit-xs-1 unit-s-1 unit-m-2-3 unit-l-1-2">
 			<ul class="grid push-0">
 				<li class="unit unit-xs-1-4 unit-s-1-4 unit-m-1-6 unit-l-1-6 text-center island-1-2 menu-item blue"><a class="pad-b-1-2 pad-t-1-2 blue" href="sprinkles.html">Sprinkles</a></li>
 				<li class="unit unit-xs-1-4 unit-s-1-4 unit-m-1-6 unit-l-1-6 text-center island-1-2 menu-item red"><a class="pad-b-1-2 pad-t-1-2 red" href="unicorns.html">Unicorns</a></li>
@@ -22,13 +22,14 @@
 		</div>		
 	</nav>
 
-	<div class="grid pad-b-1-2">
+	<div class="grid pad-b-1-2 banner">
 		<h1 class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1 text-center">Everybody's got their poison, and mine is sugar.</h1>
 	</div>
-	<div>
+
+	<section class="first">
 		<div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-4 partA f-left">
 			<div class="grid">
-				<img class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1" src="http://lorempixel.com/output/cats-q-c-400-300-9.jpg" alt="placeholder image"/>
+				<div class="unit img-a"></div>
 				<div class="push-0 island-1-2">
 					<h2 class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1 push-0 blue">Sprinkles</h2>
 					<p class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1 blue">Cheesecake tootsie roll dragée sweet roll sugar plum toffee ice cream. Gummi bears chupa chups pastry sweet roll fruitcake toffee pudding icing. Cupcake liquorice liquorice.</p>
@@ -37,7 +38,7 @@
 		</div>
 		<div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-4 partA f-left">
 			<div class="grid">
-				<img class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1" src="http://lorempixel.com/output/cats-q-c-400-300-9.jpg" alt="placeholder image"/>
+				<div class="unit img-a"></div>
 				<div class="push-0 island-1-2">
 					<h2 class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1 push-0 red">Unicorns</h2>
 					<p class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1 red">Cheesecake tootsie roll dragée sweet roll sugar plum toffee ice cream. Gummi bears chupa chups pastry sweet roll fruitcake toffee pudding icing. Cupcake liquorice liquorice.</p>
@@ -46,7 +47,7 @@
 		</div>
 		<div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-4 partA f-left">	
 			<div class="grid">
-				<img class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1" src="http://lorempixel.com/output/cats-q-c-400-300-9.jpg" alt="placeholder image"/>
+				<div class="unit img-a"></div>
 				<div class="push-0 island-1-2">
 					<h2 class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1 push-0 yellow">Rainbows</h2>
 					<p class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1 yellow">Cheesecake tootsie roll dragée sweet roll sugar plum toffee ice cream. Gummi bears chupa chups pastry sweet roll fruitcake toffee pudding icing. Cupcake liquorice liquorice.</p>
@@ -55,34 +56,30 @@
 		</div>
 		<div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-4 partA f-left">	
 			<div class="grid">
-				<img class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1" src="http://lorempixel.com/output/cats-q-c-400-300-9.jpg" alt="placeholder image"/>
+				<div class="unit img-a"></div>
 				<div class="push-0 island-1-2">
 					<h2 class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1 push-0 pink">Candy</h2>
 					<p class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1 pink">Cheesecake tootsie roll dragée sweet roll sugar plum toffee ice cream. Gummi bears chupa chups pastry sweet roll fruitcake toffee pudding icing. Cupcake liquorice liquorice.</p>
 				</div>
 			</div>
 		</div>	
-	</div>
+	</section>
 
 	<hr>
 
-	<div class="grid">
-		<div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2 island-1-2 f-left partB">
-			<h2>Cake sweet roll oat cake</h2>
-			<p>Cookie tootsie roll sugar plum bear claw lollipop. Liquorice apple pie lollipop ice cream dessert cake jujubes sugar plum caramels. Jujubes cookie jelly-o croissant cheesecake cupcake powder oat cake. Topping icing oat cake sugar plum chupa chups soufflé.
-Chocolate bar tootsie roll apple pie. Powder apple pie topping jelly beans soufflé. Gingerbread icing tiramisu tiramisu brownie ice cream candy canes.
-Marzipan chupa chups marzipan soufflé macaroon pastry bear claw donut. Candy canes croissant muffin marshmallow gingerbread. Fruitcake topping chupa chups sugar plum caramels icing dessert gummies halvah. Sugar plum sweet roll liquorice sweet topping jelly-o cake cookie.</p>
+	<section class="grid second">
+		<div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2 f-left partB">
+			<h2 class="gutter-1-2">Cake sweet roll oat cake</h2>
+			<p class="gutter-1-2">Cookie tootsie roll sugar plum bear claw lollipop. Liquorice apple pie lollipop ice cream dessert cake jujubes sugar plum caramels. Jujubes cookie jelly-o croissant cheesecake cupcake powder oat cake. Topping icing oat cake sugar plum chupa chups soufflé.<br>Chocolate bar tootsie roll apple pie. Powder apple pie topping jelly beans soufflé. Gingerbread icing tiramisu tiramisu brownie ice cream candy canes.<br>Marzipan chupa chups marzipan soufflé macaroon pastry bear claw donut. Candy canes croissant muffin marshmallow gingerbread. Fruitcake topping chupa chups sugar plum caramels icing dessert gummies halvah. Sugar plum sweet roll liquorice sweet topping jelly-o cake cookie.</p>
 		</div>
-		<div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2 island-1-2 f-left partB">
-			<h2>Liquorice apple pie lollipop</h2>
-			<p>Cookie tootsie roll sugar plum bear claw lollipop. Liquorice apple pie lollipop ice cream dessert cake jujubes sugar plum caramels. Jujubes cookie jelly-o croissant cheesecake cupcake powder oat cake. Topping icing oat cake sugar plum chupa chups soufflé.
-Chocolate bar tootsie roll apple pie. Powder apple pie topping jelly beans soufflé. Gingerbread icing tiramisu tiramisu brownie ice cream candy canes.
-Marzipan chupa chups marzipan soufflé macaroon pastry bear claw donut. Candy canes croissant muffin marshmallow gingerbread. Fruitcake topping chupa chups sugar plum caramels icing dessert gummies halvah. Sugar plum sweet roll liquorice sweet topping jelly-o cake cookie.</p>
+		<div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2 f-left partB">
+			<h2 class="gutter-1-2">Liquorice apple pie lollipop</h2>
+			<p class="gutter-1-2">Cookie tootsie roll sugar plum bear claw lollipop. Liquorice apple pie lollipop ice cream dessert cake jujubes sugar plum caramels. Jujubes cookie jelly-o croissant cheesecake cupcake powder oat cake. Topping icing oat cake sugar plum chupa chups soufflé.Chocolate bar tootsie roll apple pie.<br> Powder apple pie topping jelly beans soufflé. Gingerbread icing tiramisu tiramisu brownie ice cream candy canes.Marzipan chupa chups marzipan soufflé macaroon pastry bear claw donut. <br>Candy canes croissant muffin marshmallow gingerbread. Fruitcake topping chupa chups sugar plum caramels icing dessert gummies halvah. Sugar plum sweet roll liquorice sweet topping jelly-o cake cookie.</p>
 		</div>
-	</div>
+	</section>
 
 	<footer class="grid">
-		<p class="unit">&copy; Everything Nice</p>
+		<p class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2 push-0 island-1-2 micro">&copy; Everything Nice &bull; <a href="terms-privacy-cookies.html">Terms, privacy & cookies</a></p>
 	</footer>
 </body>
 </html>
