made img-a no longer background images

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 	<section class="first">
 		<div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-4 partA f-left">
 			<div class="grid">
-				<div class="unit img-a"></div>
+				<img src="http://lorempixel.com/output/cats-q-c-400-300-9.jpg" alt="placeholder image" class="unit img-a" />
 				<div class="push-0 island-1-2">
 					<h2 class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1 push-0 blue">Sprinkles</h2>
 					<p class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1 blue">Cheesecake tootsie roll dragée sweet roll sugar plum toffee ice cream. Gummi bears chupa chups pastry sweet roll fruitcake toffee pudding icing. Cupcake liquorice liquorice.</p>
@@ -38,7 +38,7 @@
 		</div>
 		<div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-4 partA f-left">
 			<div class="grid">
-				<div class="unit img-a"></div>
+				<img src="http://lorempixel.com/output/cats-q-c-400-300-9.jpg" alt="placeholder image" class="unit img-a" />
 				<div class="push-0 island-1-2">
 					<h2 class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1 push-0 red">Unicorns</h2>
 					<p class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1 red">Cheesecake tootsie roll dragée sweet roll sugar plum toffee ice cream. Gummi bears chupa chups pastry sweet roll fruitcake toffee pudding icing. Cupcake liquorice liquorice.</p>
@@ -47,7 +47,7 @@
 		</div>
 		<div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-4 partA f-left">	
 			<div class="grid">
-				<div class="unit img-a"></div>
+				<img src="http://lorempixel.com/output/cats-q-c-400-300-9.jpg" alt="placeholder image" class="unit img-a" />
 				<div class="push-0 island-1-2">
 					<h2 class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1 push-0 yellow">Rainbows</h2>
 					<p class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1 yellow">Cheesecake tootsie roll dragée sweet roll sugar plum toffee ice cream. Gummi bears chupa chups pastry sweet roll fruitcake toffee pudding icing. Cupcake liquorice liquorice.</p>
@@ -56,7 +56,7 @@
 		</div>
 		<div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-4 partA f-left">	
 			<div class="grid">
-				<div class="unit img-a"></div>
+				<img src="http://lorempixel.com/output/cats-q-c-400-300-9.jpg" alt="placeholder image" class="unit img-a" />
 				<div class="push-0 island-1-2">
 					<h2 class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1 push-0 pink">Candy</h2>
 					<p class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1 pink">Cheesecake tootsie roll dragée sweet roll sugar plum toffee ice cream. Gummi bears chupa chups pastry sweet roll fruitcake toffee pudding icing. Cupcake liquorice liquorice.</p>
