Played with styling

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 	<nav class="grid coda pad-b">
-		<a class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-4 yotta text-center f-left island title white" href="index.html">Everything Nice</a>
+		<a class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-4 yotta text-center f-left island title" href="index.html">Everything Nice</a>
 		<div class="unit unit-xs-1 unit-s-1 unit-m-2-3 unit-l-1-2">
 			<ul class="grid push-0">
 				<li class="unit unit-xs-1-4 unit-s-1-4 unit-m-1-6 unit-l-1-6 text-center island-1-2 menu-item blue"><a class="pad-b-1-2 pad-t-1-2 blue" href="sprinkles.html">Sprinkles</a></li>
@@ -23,7 +23,7 @@
 	</nav>
 
 	<div class="grid pad-b-1-2 banner">
-		<h1 class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1 text-center">Everybody's got their poison, and mine is sugar.</h1>
+		<h1 class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1 text-center white">Everybody's got their poison, and mine is sugar.</h1>
 	</div>
 
 	<section class="first">
@@ -65,14 +65,12 @@
 		</div>	
 	</section>
 
-	<hr>
-
-	<section class="grid second">
-		<div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2 f-left partB">
+	<section class="grid second pad-t">
+		<div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2 f-left partB gray">
 			<h2 class="gutter-1-2">Cake sweet roll oat cake</h2>
 			<p class="gutter-1-2">Cookie tootsie roll sugar plum bear claw lollipop. Liquorice apple pie lollipop ice cream dessert cake jujubes sugar plum caramels. Jujubes cookie jelly-o croissant cheesecake cupcake powder oat cake. Topping icing oat cake sugar plum chupa chups soufflé.<br>Chocolate bar tootsie roll apple pie. Powder apple pie topping jelly beans soufflé. Gingerbread icing tiramisu tiramisu brownie ice cream candy canes.<br>Marzipan chupa chups marzipan soufflé macaroon pastry bear claw donut. Candy canes croissant muffin marshmallow gingerbread. Fruitcake topping chupa chups sugar plum caramels icing dessert gummies halvah. Sugar plum sweet roll liquorice sweet topping jelly-o cake cookie.</p>
 		</div>
-		<div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2 f-left partB">
+		<div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2 f-left partB gray">
 			<h2 class="gutter-1-2">Liquorice apple pie lollipop</h2>
 			<p class="gutter-1-2">Cookie tootsie roll sugar plum bear claw lollipop. Liquorice apple pie lollipop ice cream dessert cake jujubes sugar plum caramels. Jujubes cookie jelly-o croissant cheesecake cupcake powder oat cake. Topping icing oat cake sugar plum chupa chups soufflé.Chocolate bar tootsie roll apple pie.<br> Powder apple pie topping jelly beans soufflé. Gingerbread icing tiramisu tiramisu brownie ice cream candy canes.Marzipan chupa chups marzipan soufflé macaroon pastry bear claw donut. <br>Candy canes croissant muffin marshmallow gingerbread. Fruitcake topping chupa chups sugar plum caramels icing dessert gummies halvah. Sugar plum sweet roll liquorice sweet topping jelly-o cake cookie.</p>
 		</div>
